--- a/paper/main.tex
+++ b/paper/main.tex
@@ -43,9 +43,9 @@
 	
 	\IEEEauthorblockN{Ben Kaiser}
 	\IEEEauthorblockA{
-		Princeton\\
+		Princeton University\\
 		MIT Lincoln Laboratory\IEEEauthorrefmark{1}\\
-		bkaiswer@cs.princeton.edu
+		bkaiser@princeton.edu
 	}
 
 	\and
