--- a/paper/sections/introduction.tex
+++ b/paper/sections/introduction.tex
@@ -47,7 +47,10 @@ Finally, much of industry literature is written by use case experts who are well
 
 In contrast, academic literature focuses on technical deep dives on Blockchain technology's subsystems and implementations built on Blockchain technology.
 For example, existing academic surveys on Blockchain technology have focused on particular systems or technical properties: Bitcoin~\cite{BMC+15,Narayanan17}, payment privacy~\cite{Conti17}, security and performance~\cite{Gervais16}, scalability~\cite{Croman16}, and consensus protocols~\cite{Bano17,garay2018consensus}.
-In this regard, the existing literature acts as a good compliment to this paper---i.e., researchers interested in Blockchain technology can read this paper to gain a holistic overview of the space and then dive deeply into specific subtopics by reviewing other Blockchain survey papers.
+In this regard, the existing literature acts as a complement to this 
+paper---i.e., researchers interested in Blockchain technology can read this 
+paper to gain a holistic overview of the space and then dive deeply into 
+specific subtopics by reviewing other Blockchain survey papers.
 
 % Jeremy: We invert the common approach: we don't study blockchain people looking at use-cases, we study the use case people looking at blockchain
 %To answer these questions, it is insufficient to consider academic sources alone.
@@ -57,7 +60,8 @@ In this regard, the existing literature acts as a good compliment to this paper-
 %This allowed us to extract and separate valuable technical insights out from the hype and technical misunderstandings that permeate this body of work.
 %Based on this analysis of data from industry, interspersed with our own knowledge and a review of the academic literature, we are able to answer the questions commonly asked in relation to Blockchain technology, as well as shed light on industry's understandings and misunderstandings of the technology. 
 
-Ultimately, our technical analysis was successful at answering the questions identified previously and in this paper we present those answers.
+Ultimately, our technical analysis was successful at answering the questions 
+identified previously, and in this paper we present those answers.
 While some readers may find the results of this paper unsurprising or differing from their viewpoints regarding Blockchain technology, we believe that this paper will be helpful to the community at large (both Blockchain experts and non-experts) and provide a common reference point for discussion on Blockchain technology.
 %While many of the results in this work might not be surprising to some readers, our experience suggests that knowledge of Blockchain technology is neither universal nor complete within the security community.
 Taken together, the results in this paper represent the most complete overview of Blockchain technology and its potential use cases available in a single work that we are aware of.
