fixes and style tweaks throughout

--- a/paper/main.tex
+++ b/paper/main.tex
@@ -45,7 +45,7 @@
 	\IEEEauthorblockA{
 		Princeton\\
 		MIT Lincoln Laboratory\IEEEauthorrefmark{1}\\
-		bkaiswer@cs.princeton.edu
+		bkaiser@cs.princeton.edu
 	}
 
 	\and
