--- a/paper/sections/conclusion.tex
+++ b/paper/sections/conclusion.tex
@@ -5,16 +5,30 @@
 \section{Conclusion}
 Ultimately, Blockchain technology is neither a panacea nor worthless.
 Instead it is a useful tool in a system developer's toolkit that can be applied when its overhead is justified by the system's needs.
-Even though Blockchain technology does not solve all the problems that its proponents claim it does, we believe that is a meaningful technology that will continue to be used in industry and is deserving of some attention by industry.
+Even though Blockchain technology does not solve all the problems that its 
+proponents claim it does, we believe that it is a meaningful technology that 
+will continue to be used in industry and is deserving of some attention by 
+researchers.
 
-Based on our results and experience we recommend the use of the following questions to determine if Blockchain technology would be a good fit for a specific project.%\footnote{In Appendix~\ref{sec:distributed-comparison} we discuss alternatives to Blockchain technology.}
+Based on our results and experience, we recommend the use of the following 
+questions to determine if Blockchain technology would be a good fit for a 
+specific project.%\footnote{In Appendix~\ref{sec:distributed-comparison} we 
+%discuss alternatives to Blockchain technology.}
 
 \begin{enumerate}
 	\item Does the system require shared governance?
 	\item Does the system require shared operation?
 \end{enumerate}
 
-If the answer to both questions is no, then Blockchain's consensus protocol is likely unnecessary overhead. If the answer to both questions is yes, then Blockchain technology is likely a good fit. This is due to the fact that meaningful shared governance \emph{and} operation requires miners to audit the operations of others and to be able to recover data that a malicious miner might try to delete (questions 3 and 4 below, respectively). If only shared governance or shared operation is needed, then the following two questions can be used to determine if the auditable ledger and replication, respectively, justifying the use of Blockchain technology if both are needed:
+If the answer to both questions is no, then Blockchain's consensus protocol is 
+likely unnecessary overhead. If the answer to both questions is yes, then 
+Blockchain technology is likely a good fit. This is due to the fact that 
+meaningful shared governance \emph{and} operation requires miners to audit the 
+operations of others and to be able to recover data that a malicious miner 
+might try to delete. %(questions 3 and 4 below, respectively).
+If only shared governance or shared operation is needed, then the following two 
+questions can be used to determine if the auditable ledger and replication, 
+respectively, justify the use of Blockchain technology:
 
 \begin{enumerate}[start=3]
 	\item Is it necessary to audit the system's provenance?
