--- a/paper/sections/introduction.tex
+++ b/paper/sections/introduction.tex
@@ -8,19 +8,27 @@
 
 %Two decades after eCash was first proposed,
 In 2008, an author using the pseudonym Satoshi Nakamoto wrote a white paper describing Bitcoin, a new decentralized cryptocurrency~\cite{Nak08}.
-Unlike centralized cryptocurrencies which rely on a set of known entities to operate, Bitcoin uses a proof-of-work-based scheme to allow the general public to maintain the system.%~s\cite{DN93,back1997partial} 
+Unlike centralized cryptocurrencies which rely on a set of known entities to 
+operate, Bitcoin uses a proof-of-work-based scheme to allow the general public 
+to maintain the system. %~s\cite{DN93,back1997partial} 
 To incentivize public participation, Bitcoin pays participants (known as miners) for solving the proof-of-work puzzles.
 While Bitcoin's building blocks were not novel, the composition of these properties into a single system was a meaningful contribution~\cite{Narayanan17} which led the cryptocurrency to become the first to achieve widespread popularity and usage.
 
 At the peak of its popularity, Bitcoin's market capitalization reached \$835.69 billion (USD), though at the time of this writing it has seen a decrease in both its stature and market capitalization (\$182 billion).
 Nevertheless, there remains significant interest in the question of whether the technology underlying Bitcoin---known as \emph{Blockchain technology} or {Blockchain} for short---could be used to build other interesting cryptocurrencies or distributed systems.
-In particular, we have consistently heard researchers, business executives, and government leadership ask the following three questions: (1) what exactly is Blockchain technology, (2) what capabilities does it provide, and (3) what are good applications for Blockchain technology.%, and (4) how does it relate to other approache distributed technologies (e.g., distributed databases).
+In particular, we have heard researchers, business executives, and government 
+leaders consistently ask the following three questions: (1) what exactly is 
+Blockchain technology, (2) what capabilities does it provide, and (3) what are 
+good applications for Blockchain technology.%, and (4) how does it relate to 
+%other approache distributed technologies (e.g., distributed databases).
 %
 %Unfortunately, there is a lack of clarity regarding the answers to these questions in both the community and the literature, impeding the ability for researchers to properly understand, evaluate, and leverage Blockchain technology.
 %This lack of clarity stems at least in part from competing viewpoints and terminology regarding Blockchain technology, resulting in seemingly contradictory statements that can all be true in their respective contexts.
 In this article, 
 %we attempt to address this ambiguity and 
-we attempt to provide a holistic overview of Blockchain technology, set forth a common lexicon for discussing Blockchain technology, and answer the three questions identified above.
+we provide a holistic overview of Blockchain technology, set forth a common 
+lexicon for discussing Blockchain technology, and answer the three questions 
+identified above.
 
 %\begin{table}
 %	\centering
@@ -58,7 +66,8 @@ we attempt to provide a holistic overview of Blockchain technology, set forth a 
 %Ultimately, our technical analysis was successful at answering our three questions and in this paper we present those answers.
 %While some readers may find the results described in this article unsurprising or differing from their viewpoints regarding Blockchain technology, we believe that this paper will be helpful to the community at large and provide a common reference point for discussion on Blockchain technology.
 %While many of the results in this work might not be surprising to some readers, our experience suggests that knowledge of Blockchain technology is neither universal nor complete within the security community.
-Taken together, the results in this paper represent the most complete overview of Blockchain technology and its potential use cases available in a single work that we are aware of.
+Taken together, the results in this paper represent the most complete overview 
+of Blockchain technology and its potential use cases available in a single work.
 The results are intended to serve as an aid for researchers as they field questions related to Blockchain and as they explore whether Blockchain technology is relevant to their personal research areas.
 %Concretely, our key contributions are:
 
