--- a/paper/sections/use-cases.tex
+++ b/paper/sections/use-cases.tex
@@ -3,7 +3,9 @@
 \section{Blockchain Technology's Use Cases}
 \label{sec:use-cases}
 
-There are many use cases where Blockchain has the potential to be a useful technology.
+Industry and government can apply Blockchain in a number of uses cases which 
+require shared governance, verifiable state, and/or resilience to data loss. 
+
 %Within the literature we analyzed, there was significant discussion about potential applications for Blockchain technology.
 %We describe these use cases here.
 %In many cases, an argument could be made that these are not independent use cases. Some use cases are subsumed by others, or two use cases might have a common abstraction that make them effectively the same.
@@ -22,7 +24,8 @@ There are many use cases where Blockchain has the potential to be a useful techn
 % anonymous: zerocoin, zerocash, etc
 
 It is well-known that Blockchain technology can be used to build cryptocurrencies; Bitcoin is a working example of this.
-Blockchain technology enables electronic transactions that are resilient even when large values are at stake.
+Blockchain technology enables electronic transactions that are resilient even 
+when large amounts of money are at stake.
 %Bitcoin has notable drawbacks that include scalability, performance and privacy.
 %There is ongoing research that demonstrates how Blockchain technology can be used to create payment systems that are low-latency and scalable~\cite{}, partially offline~\cite{}, confidential~\cite{} and/or anonymous~\cite{}.
 %There is ongoing research that demonstrates how Blockchain technology can be used to create payment systems that are low-latency and scalable, partially offline, confidential, and/or anonymous (see Appendix~\ref{sec:academic}).
@@ -31,7 +34,7 @@ Blockchain technology enables electronic transactions that are resilient even wh
 % Jeremy: previously Token tracking and trading
 % Jeremy: changed to clarify differences with next one
 
-Real world financial markets provide the ability for the exchange of valuable assets. 
+Financial markets allow the exchange of assets. 
 They tend to involve intermediaries like exchanges, brokers and dealers, depositories and custodians, and clearing and settlement entities. 
 Blockchain-based assets---which are either intrinsically valuable or are a claim on an off-chain asset (material or digital)---can be transacted directly between participants, governed by smart contracts that can provide custodianship, and require less financial market infrastructure.
 %For tokens (i.e., digital identifiers) that represent something off-chain (\ie equity in a firm or a debt instrument), the issue of stapling must be addressed.
@@ -47,10 +50,18 @@ Decentralized markets and auction mechanisms can run on Blockchain technology.
 %An additional challenge is the potential for front-running by participants in the Blockchain network (in particular, miners) who learn of transactions before they are finalized. 
 
 \paragraph{Insurance and futures}
-A transaction can be thought of as a swap of one valuable asset for another. Swaps can be arranged for a future time.
-Examples include agreeing to a price for a future purchase of oil, turning a variable interest rate into a fixed rate, and providing cash for collateral with the promise that the cash will be returned.
-Further, this future swap might be contingent on an event happening. 
-Examples include a derivative that is valuable if a stock price decreases, an insurance payout for a fire, or a payment that covers a loan default.
+Using smart contracts, transactions can be arranged for future times.
+Examples include agreeing to a price for a future purchase of oil, turning a 
+variable interest rate into a fixed rate, and providing cash for collateral 
+with the promise that the cash will be returned.
+Furthermore, a smart contract can structure payouts that are contingent on 
+specific events, such as a derivative that becomes valuable if a stock price 
+decreases, an insurance payout for a fire, or a payment that covers a loan 
+default.
+As long as the contingent event can be registered by the BLockchain (either 
+because it occurs on-chain or can be determined by an off-chain oracle), these 
+use cases are perfectly valid.
+
 %The primary challenge of transactions of this the risk that the counterparty will not fulfill their future obligations. While Blockchain technologies can reduce some types of trust, it cannot easily solve counterparty risk. 
 %It can offer transparency which can be used to build reputation and contracts can be designed to hold digital currency or assets as collateral and disperse them if Blockchain-based conditions are met.
 %A second challenge for many of these use cases is reporting real world events (a fire, a change in the price of a stock, or mortgage default) to the Blockchain in a trustworthy fashion.
@@ -62,7 +73,9 @@ Examples include a derivative that is valuable if a stock price decreases, an in
 
 %In common parlance, code running on a Blockchain is called a smart contract.\footnote{In particular, the success of Ethereum contributed to this, although that project now prefers the term `decentalized app' or dapp for short.}
 Legal contracts will often anticipate potential future breaches and offer a set of penalties or remedies.
-With Blockchain technology, a set of remedies could be programmed into a smart contract assuming both the triggering event and the resulting action are Blockchain-based (or that the gap is bridged by an off-chain oracle).
+With Blockchain technology, a set of remedies could be programmed into a smart 
+contract. As above, the triggering event (and the resulting action) must be 
+Blockchain-based or accessible by an off-chain oracle.
 %If the contract is legally well-formed, with identified counterparties in a clear jurisdiction, the remedies can be thought of as a set of reasonable default actions that can avoid, but do not preclude, expensive litigation. 
 
 % =====
@@ -72,7 +85,8 @@ With Blockchain technology, a set of remedies could be programmed into a smart c
 \paragraph{Asset tracking} 
 % Jeremy: Merger of separate sections ``asset tracking'' and ``supply chain management''
 
-Blockchain technology can be used for tracking material assets that are globally distributed, valuable, and whose provenance is of interest.
+Blockchain technology can be used to track material assets that are globally 
+distributed, valuable, and whose provenance is of interest.
 This includes standalone items like artwork and diamonds, certified goods like food and luxury items, dispersed items like fleets of vehicles, and packages being shipped over long distances, which will change hands many times in the process. 
 It also includes the individual components of complex assembled devices, where the parts originate from different firms. 
 For heavily regulated industries, like airlines, and for military/intelligence applications, it is important to establish the source of each part that has been used, as well as a maintenance history.
@@ -89,7 +103,7 @@ Blockchain technology provides a common environment where no single firm has the
 
 Identities, along with cryptographic attestations about properties for those identities (e.g., over 18 years of age, has a driver's license), can be written to the Blockchain.
 These identities and attestations can then be used by other systems to support their access control policies.
-Importantly, this identity information comes with full provenance.
+On a Blockchain, this identity information can come with full provenance.
 %This could be useful in determining suspicious activity (e.g., having an age that is not increasing linearly).
 %This could also be a quicker and more performant way of establishing identity than the current certificate authority system.
 
@@ -105,7 +119,8 @@ Importantly, this identity information comes with full provenance.
 % Jeremy: To do
 % Jeremy: Merge of permanent record storage and timestamping
 % Jeremy: Haber Stornetta
-The append-only ledger is used to store documents, including the history of changes to these documents.
+The append-only ledger of a Blockchain can be used to store documents, 
+including the history of changes to these documents.
 This use case is best suited for records that are highly valuable (such as certificates, government licenses), have a small data size, and are publicly available (as they will be replicated by all miners).
 If large and/or confidential documents need to be stored, then the Blockchain can store binding/hiding commitments for the documents, while the documents themselves are stored in another system with lower overhead.
 %For open Blockchains, the identity of the entity certifying the data is not provided for by default on a Blockchain.
